force-app/main/default/objects/OrderPricingTable__mdt/OrderPricingTable__mdt.object-meta.xml
<CustomObject>
    <label>OrderPricingTable</label>
    <pluralLabel>OrderPricingTable</pluralLabel>
</CustomObject>