force-app/main/default/objects/OrderPricingTable__mdt/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <label>Pricebook</label>
    <length>155</length>
    <type>Text</type>
</CustomField>