force-app/main/default/objects/OrderPricingTable__mdt/fields/PricingMethod__c.field-meta.xml
<CustomField>
    <fullName>PricingMethod__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrderProductQuantity</fullName>
                <default>true</default>
                <label>OrderProductQuantity</label>
            </value>
            <value>
                <fullName>AccountStudents</fullName>
            </value>
            <value>
                <fullName>ProductUsageBased</fullName>
            </value>
            <value>
                <fullName>ProductDiscountGroupUsageBased</fullName>
            </value>
            <value>
                <fullName>OrderTotalAmount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>