force-app/main/default/objects/OrderPricingTable__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Reseller Category 1</fullName>
            </value>
            <value>
                <fullName>Reseller Category 2</fullName>
            </value>
            <value>
                <fullName>Reseller Category 3</fullName>
            </value>
            <value>
                <fullName>Private Individual</fullName>
            </value>
            <value>
                <fullName>Trade Bookstore</fullName>
            </value>
            <value>
                <fullName>Trade Bookstore 8%</fullName>
            </value>
            <value>
                <fullName>Trade Bookstore 20%</fullName>
            </value>
            <value>
                <fullName>Trade Bookstore - Combined</fullName>
            </value>
            <value>
                <fullName>Reseller Discount Incremental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>